(library
 (name banal)
 (libraries zarith utils apron frontend oUnit apron.boxMPQ apron.octMPQ
   apron.polkaMPQ)
 (foreign_stubs
  (language c)
  (names ml_float))
 (flags
  (:standard -open Utils -open Frontend -open Apron)))

(env
 (dev
  (flags
   (:standard -w -9-27-32-33-35 -warn-error -A))))
